deploy: d4d4a1643b02c4bc4674e37230d16996e49cec66

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d5c798c5",
+   "id": "29968878",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f03b8077",
+   "id": "8f889bdd",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15d90707",
+   "id": "154ad82f",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "118c8a87",
+   "id": "555418e9",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef149312",
+   "id": "cfa4d06c",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1f1c2f3",
+   "id": "16a1d5ec",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d7328f2d",
+   "id": "53658a98",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:48:28.688057Z",
-     "iopub.status.busy": "2024-10-15T10:48:28.687626Z",
-     "iopub.status.idle": "2024-10-15T10:48:32.988982Z",
-     "shell.execute_reply": "2024-10-15T10:48:32.988424Z"
+     "iopub.execute_input": "2024-10-15T10:55:31.565405Z",
+     "iopub.status.busy": "2024-10-15T10:55:31.565222Z",
+     "iopub.status.idle": "2024-10-15T10:55:36.066234Z",
+     "shell.execute_reply": "2024-10-15T10:55:36.065624Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fcbcd0b",
+   "id": "b0d71ddb",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5ab9f53",
+   "id": "6f779080",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a2fb758",
+   "id": "17d416f0",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73daf6a5",
+   "id": "19d100f4",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14ec7cfd",
+   "id": "bf816e72",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12c1ed96",
+   "id": "a859374e",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8642b2af",
+   "id": "ef3c1247",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f249508b",
+   "id": "834889ac",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d9b01151",
+   "id": "56f91482",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:48:32.991456Z",
-     "iopub.status.busy": "2024-10-15T10:48:32.990888Z",
-     "iopub.status.idle": "2024-10-15T10:48:34.861364Z",
-     "shell.execute_reply": "2024-10-15T10:48:34.860759Z"
+     "iopub.execute_input": "2024-10-15T10:55:36.068726Z",
+     "iopub.status.busy": "2024-10-15T10:55:36.068208Z",
+     "iopub.status.idle": "2024-10-15T10:55:38.118108Z",
+     "shell.execute_reply": "2024-10-15T10:55:38.117470Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05eaae34",
+   "id": "521b8932",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eb34be84",
+   "id": "af2b58af",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:48:34.863426Z",
-     "iopub.status.busy": "2024-10-15T10:48:34.863055Z",
-     "iopub.status.idle": "2024-10-15T10:48:34.866958Z",
-     "shell.execute_reply": "2024-10-15T10:48:34.866345Z"
+     "iopub.execute_input": "2024-10-15T10:55:38.120445Z",
+     "iopub.status.busy": "2024-10-15T10:55:38.119990Z",
+     "iopub.status.idle": "2024-10-15T10:55:38.123757Z",
+     "shell.execute_reply": "2024-10-15T10:55:38.123136Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1feea41",
+   "id": "5ee15318",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01512f9b",
+   "id": "91cd081e",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08ca7309",
+   "id": "c2248cff",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10800318",
+   "id": "61b2ace2",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "355ffc65",
+   "id": "c2375c10",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:48:34.868919Z",
-     "iopub.status.busy": "2024-10-15T10:48:34.868529Z",
-     "iopub.status.idle": "2024-10-15T10:48:34.912777Z",
-     "shell.execute_reply": "2024-10-15T10:48:34.912251Z"
+     "iopub.execute_input": "2024-10-15T10:55:38.125651Z",
+     "iopub.status.busy": "2024-10-15T10:55:38.125310Z",
+     "iopub.status.idle": "2024-10-15T10:55:38.172083Z",
+     "shell.execute_reply": "2024-10-15T10:55:38.171507Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e9ecca8",
+   "id": "db9de4d0",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "72f4c5a4",
+   "id": "f79833ef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:48:34.914813Z",
-     "iopub.status.busy": "2024-10-15T10:48:34.914501Z",
-     "iopub.status.idle": "2024-10-15T10:48:34.982303Z",
-     "shell.execute_reply": "2024-10-15T10:48:34.981669Z"
+     "iopub.execute_input": "2024-10-15T10:55:38.174237Z",
+     "iopub.status.busy": "2024-10-15T10:55:38.173865Z",
+     "iopub.status.idle": "2024-10-15T10:55:38.242731Z",
+     "shell.execute_reply": "2024-10-15T10:55:38.242161Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec5df752",
+   "id": "f199ceb5",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e05ba57e",
+   "id": "0fba2f8f",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f4cd73e1",
+   "id": "55dcca3c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:48:34.984577Z",
-     "iopub.status.busy": "2024-10-15T10:48:34.984087Z",
-     "iopub.status.idle": "2024-10-15T10:48:35.014563Z",
-     "shell.execute_reply": "2024-10-15T10:48:35.014011Z"
+     "iopub.execute_input": "2024-10-15T10:55:38.244839Z",
+     "iopub.status.busy": "2024-10-15T10:55:38.244345Z",
+     "iopub.status.idle": "2024-10-15T10:55:38.274549Z",
+     "shell.execute_reply": "2024-10-15T10:55:38.273917Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01c5e980",
+   "id": "b075861f",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30df2cfb",
+   "id": "c8e97866",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77370940",
+   "id": "3878686c",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b1a7fc5",
+   "id": "a73dbee0",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa4a98e9",
+   "id": "3f6cc59f",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f317f879",
+   "id": "e506e0f5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:48:35.016740Z",
-     "iopub.status.busy": "2024-10-15T10:48:35.016258Z",
-     "iopub.status.idle": "2024-10-15T10:48:35.020567Z",
-     "shell.execute_reply": "2024-10-15T10:48:35.019911Z"
+     "iopub.execute_input": "2024-10-15T10:55:38.276736Z",
+     "iopub.status.busy": "2024-10-15T10:55:38.276281Z",
+     "iopub.status.idle": "2024-10-15T10:55:38.280510Z",
+     "shell.execute_reply": "2024-10-15T10:55:38.279938Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7bd8121",
+   "id": "c74d268c",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d7412fbb",
+   "id": "d793dfd7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:48:35.022611Z",
-     "iopub.status.busy": "2024-10-15T10:48:35.022256Z",
-     "iopub.status.idle": "2024-10-15T10:48:35.025280Z",
-     "shell.execute_reply": "2024-10-15T10:48:35.024639Z"
+     "iopub.execute_input": "2024-10-15T10:55:38.282425Z",
+     "iopub.status.busy": "2024-10-15T10:55:38.282104Z",
+     "iopub.status.idle": "2024-10-15T10:55:38.285090Z",
+     "shell.execute_reply": "2024-10-15T10:55:38.284439Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6e71c12",
+   "id": "eeb90b72",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d1c64640",
+   "id": "9bc7c955",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:48:35.027073Z",
-     "iopub.status.busy": "2024-10-15T10:48:35.026760Z",
-     "iopub.status.idle": "2024-10-15T10:48:37.608122Z",
-     "shell.execute_reply": "2024-10-15T10:48:37.607535Z"
+     "iopub.execute_input": "2024-10-15T10:55:38.286812Z",
+     "iopub.status.busy": "2024-10-15T10:55:38.286495Z",
+     "iopub.status.idle": "2024-10-15T10:55:40.943074Z",
+     "shell.execute_reply": "2024-10-15T10:55:40.942470Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44913b79",
+   "id": "930ecb5b",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bce6aca3",
+   "id": "bbdeaf68",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4661aad9",
+   "id": "4c3f2abd",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3570fe25",
+   "id": "42ca5ccc",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4506ef45",
+   "id": "cc3202af",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:48:37.610347Z",
-     "iopub.status.busy": "2024-10-15T10:48:37.609952Z",
-     "iopub.status.idle": "2024-10-15T10:48:37.614019Z",
-     "shell.execute_reply": "2024-10-15T10:48:37.613477Z"
+     "iopub.execute_input": "2024-10-15T10:55:40.945397Z",
+     "iopub.status.busy": "2024-10-15T10:55:40.944974Z",
+     "iopub.status.idle": "2024-10-15T10:55:40.949272Z",
+     "shell.execute_reply": "2024-10-15T10:55:40.948552Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f37f7f85940>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f16491a9940>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a74dbae8",
+   "id": "86740574",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c8c3829",
+   "id": "27aab81c",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04805caa",
+   "id": "577dbfb0",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "378f1193",
+   "id": "b4fab34d",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "19efbe2a",
+   "id": "c8734632",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:48:37.615869Z",
-     "iopub.status.busy": "2024-10-15T10:48:37.615548Z",
-     "iopub.status.idle": "2024-10-15T10:48:37.618722Z",
-     "shell.execute_reply": "2024-10-15T10:48:37.618139Z"
+     "iopub.execute_input": "2024-10-15T10:55:40.951416Z",
+     "iopub.status.busy": "2024-10-15T10:55:40.950998Z",
+     "iopub.status.idle": "2024-10-15T10:55:40.954452Z",
+     "shell.execute_reply": "2024-10-15T10:55:40.953966Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d5a0a25c",
+   "id": "3f8938da",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:48:37.620681Z",
-     "iopub.status.busy": "2024-10-15T10:48:37.620334Z",
-     "iopub.status.idle": "2024-10-15T10:48:38.697347Z",
-     "shell.execute_reply": "2024-10-15T10:48:38.696775Z"
+     "iopub.execute_input": "2024-10-15T10:55:40.956199Z",
+     "iopub.status.busy": "2024-10-15T10:55:40.955845Z",
+     "iopub.status.idle": "2024-10-15T10:55:42.056492Z",
+     "shell.execute_reply": "2024-10-15T10:55:42.055883Z"
     }
    },
    "outputs": [
